objects/Form__c.object
<CustomObject>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <formula>Owner:User.FirstName &amp; &quot; &quot; &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Executive</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Paid_Date__c</fullName>
        <label>Date Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Amount_Paid__c</fullName>
        <label>Amount Paid</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audio_Visual_Requirements__c</fullName>
        <label>Audio/Visual Requirements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Projector</fullName>
                </value>
                <value>
                    <fullName>Projector Screen</fullName>
                </value>
                <value>
                    <fullName>Speakers</fullName>
                </value>
                <value>
                    <fullName>Podium</fullName>
                </value>
                <value>
                    <fullName>Laptops</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Budget is for the event itself - does not include honorarium.</description>
        <inlineHelpText>Budget is for the event itself - does not include honorarium.</inlineHelpText>
        <label>Budget</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This field is required. For speaker events, please select &apos;2019 KOL Speaker Events&apos;. For conferences, please select &apos;2019 Exhibit Events&apos;.</inlineHelpText>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select active Master Campaign for the specified year.</errorMessage>
            <filterItems>
                <field>Campaign.Is_Parent_Campaign__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>For speaker events, please select &apos;2019 KOL Speaker Events&apos;.
For conferences, please select &apos;2019 Exhibit Events&apos;.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_to_be_Sent__c</fullName>
        <label>Collateral to be Sent</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <defaultValue>&quot;Guardant Health&quot;</defaultValue>
        <label>Company Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event City</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>Name of event</description>
        <inlineHelpText>Name of the event, conference, or exhibit. Required.</inlineHelpText>
        <label>Event Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Time__c</fullName>
        <label>Event Time</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exhibit_Agreement_Uploaded_to_Salesforce__c</fullName>
        <label>Exhibit Agreement Uploaded to Salesforce</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibit_Fee__c</fullName>
        <label>Exhibit Fee</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exhibit_Materials__c</fullName>
        <label>Exhibit Materials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Table Throw (6Ft)</fullName>
                </value>
                <value>
                    <fullName>Table Top Display</fullName>
                </value>
                <value>
                    <fullName>No materials needed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exhibitor_Documents_Received__c</fullName>
        <label>Exhibitor Documents Received</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fax_Number__c</fullName>
        <label>Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Flight_Arrival__c</fullName>
        <label>Flight Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Departure__c</fullName>
        <label>Flight Departure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form_Counter__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hotel_Arrival__c</fullName>
        <label>Hotel Arrival</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_Check_Out__c</fullName>
        <label>Hotel Check-Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hotel_of_Nights__c</fullName>
        <label>Hotel # of Nights</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <formula>&quot;Exhibitor registration for &quot; &amp; Event_Name__c &amp; &quot; on &quot; &amp; TEXT(Event_Date__c) &amp; &quot; in &quot; &amp; Event_Location__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Copy and paste this line into the Netsuite form</inlineHelpText>
        <label>Justification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <label>Location Name</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Materials_Shipping_Address__c</fullName>
        <label>Materials Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Additional_Exhibitor__c</fullName>
        <label>Name of Additional Exhibitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PDF_Invite_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Invite Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Recipient_Address__c</fullName>
        <label>Payment Recipient/Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Preferred_Venues__c</fullName>
        <label>Preferred Venues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Exhibitor_Name__c</fullName>
        <label>Primary Exhibitor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Requisition_Requested__c</fullName>
        <label>Purchase Requisition Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Purchase_Requisition__c</fullName>
        <label>Purchase Requisition #</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Forms1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Name__c</fullName>
        <label>Sales Manager Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>David Salo</fullName>
                </value>
                <value>
                    <fullName>Isabelle Eyman</fullName>
                </value>
                <value>
                    <fullName>Justin Elders</fullName>
                </value>
                <value>
                    <fullName>Eric Trierweiler</fullName>
                </value>
                <value>
                    <fullName>Danielle Usilton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <formula>Owner:User.Manager.FirstName &amp; &quot; &quot; &amp;  Owner:User.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Representative_Name__c</fullName>
        <label>Sales Representative Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Kim Forte</fullName>
                </value>
                <value>
                    <fullName>Phil Renda</fullName>
                </value>
                <value>
                    <fullName>Sean Dattoli</fullName>
                </value>
                <value>
                    <fullName>Christine Roche</fullName>
                </value>
                <value>
                    <fullName>Dawn Korinek</fullName>
                </value>
                <value>
                    <fullName>Stephanie Shannon</fullName>
                </value>
                <value>
                    <fullName>Charles Truan</fullName>
                </value>
                <value>
                    <fullName>Roger Hunter</fullName>
                </value>
                <value>
                    <fullName>Beth Zubal</fullName>
                </value>
                <value>
                    <fullName>Sara Lapomarda</fullName>
                </value>
                <value>
                    <fullName>Katie Sapp</fullName>
                </value>
                <value>
                    <fullName>Marlon Hopgood</fullName>
                </value>
                <value>
                    <fullName>Shelley Marino</fullName>
                </value>
                <value>
                    <fullName>Shannon Dean</fullName>
                </value>
                <value>
                    <fullName>Brian Long</fullName>
                </value>
                <value>
                    <fullName>Marcus Outzen</fullName>
                </value>
                <value>
                    <fullName>Danielle Uliston</fullName>
                </value>
                <value>
                    <fullName>Eric Trierweiler</fullName>
                </value>
                <value>
                    <fullName>Kris Weinberg</fullName>
                </value>
                <value>
                    <fullName>David Salo</fullName>
                </value>
                <value>
                    <fullName>Isabelle Eyman</fullName>
                </value>
                <value>
                    <fullName>Justin Elders</fullName>
                </value>
                <value>
                    <fullName>Steven Collora</fullName>
                </value>
                <value>
                    <fullName>Stan Welle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scope_of_Event__c</fullName>
        <inlineHelpText>Reason for event.</inlineHelpText>
        <label>Scope of Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signage_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signage Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speaker_Contact_Info__c</fullName>
        <formula>Speaker__r.MailingStreet &amp; &quot; &quot; 
&amp; BR() &amp;
Speaker__r.MailingCity &amp; &quot;, &quot; &amp; Speaker__r.MailingState &amp; &quot; &quot; 
&amp;  BR() &amp;
Speaker__r.MailingPostalCode &amp; &quot; &quot; 
&amp; BR() &amp;
&quot;Email:&quot; &amp; &quot; &quot; &amp; Speaker__r.Email &amp; &quot; &quot;  
&amp; BR() &amp;
&quot;Phone:&quot; &amp; &quot; &quot; &amp; Speaker__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Contact Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker_DOB__c</fullName>
        <formula>Speaker__r.DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Speaker_Name__c</fullName>
        <formula>Speaker__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The speaker selected must be approved to speak at corporate events. Contact Heather Chan or Ruben Smith for further information</inlineHelpText>
        <label>Speaker</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.GH_Approved_Speaker__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Forms</relationshipLabel>
        <relationshipName>Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_For_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit For Approval?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Arrangements_Needed__c</fullName>
        <label>Travel Arrangements Needed?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Event__c</fullName>
        <label>Type of Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Convention</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Exhibit</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Form</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account_Executive__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Purchase_Requisition__c</columns>
        <columns>Payment_Recipient_Address__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>By_AE</fullName>
        <columns>Account_Executive__c</columns>
        <columns>NAME</columns>
        <columns>Type_of_Event__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Scope_of_Event__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Executive__c</field>
            <operation>contains</operation>
            <value>paul</value>
        </filters>
        <label>By AE</label>
    </listViews>
    <listViews>
        <fullName>HHC</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Type_of_Event__c</columns>
        <columns>Speaker__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Purchase_Requisition__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Budget__c</field>
            <operation>greaterThan</operation>
            <value>5000</value>
        </filters>
        <label>HHC</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Exhibits</fullName>
        <columns>Account_Executive__c</columns>
        <columns>NAME</columns>
        <columns>Event_Name__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>Campaign__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Sales_Manager__c</columns>
        <columns>Submit_For_Approval__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Form__c.Exhibitor_Event_Request_Form</value>
        </filters>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2020</value>
        </filters>
        <label>Pending Exhibits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Sr_Vice_President_Sales</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X2017_Events</fullName>
        <columns>NAME</columns>
        <columns>Account_Executive__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Purchase_Requisition__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2017</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Form__c.Exhibitor_Event_Request_Form</value>
        </filters>
        <label>2017 Approved Events</label>
    </listViews>
    <listViews>
        <fullName>X2018_Events</fullName>
        <columns>NAME</columns>
        <columns>Account_Executive__c</columns>
        <columns>Event_Name__c</columns>
        <columns>Event_Location__c</columns>
        <columns>Event_Date__c</columns>
        <columns>Purchase_Requisition__c</columns>
        <columns>Additional_Comments__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Form__c.Exhibitor_Event_Request_Form</value>
        </filters>
        <label>2019 Approved Events</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms</pluralLabel>
    <recordTypes>
        <fullName>Exhibitor_Event_Request_Form</fullName>
        <active>true</active>
        <label>Exhibitor Event Request Form</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Function_Request_Form</fullName>
        <active>true</active>
        <label>Speaker Function Request Form</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Exhibit_Form_must_include_documents</fullName>
        <active>true</active>
        <description>Exhibit Forms must include W9, prospectus/invitation, and cost information</description>
        <errorConditionFormula>AND 
(RecordType.DeveloperName = &quot;Exhibitor_Event_Request_Form&quot;, 
OR( 
NOT(ISPICKVAL(Exhibitor_Documents_Received__c, &quot;Yes&quot;)), 
NOT(ISPICKVAL(Exhibit_Agreement_Uploaded_to_Salesforce__c, &quot;Yes&quot;))))</errorConditionFormula>
        <errorMessage>Please do not answer &quot;Yes&quot; to either &apos;Exhibitor Documents Received&apos; or Exhibit Agreement Uploaded to Salesforce&apos; until you have attached the vendor W9, prospectus or invitation, and documentation referencing the exhibit cost, to this form.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exhibitor_Event_Date_must_be_30_days_out</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Exhibitor_Event_Request_Form&quot; &amp;&amp;    !ISPICKVAL(Approval_Status__c, &quot;Approved&quot;) &amp;&amp;  
Event_Date__c  - Today() &lt;= 30</errorConditionFormula>
        <errorDisplayField>Event_Date__c</errorDisplayField>
        <errorMessage>Event Date must be at least 30 days in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Speaker_Event_Date_must_be_45_days_out</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Speaker_Function_Request_Form&quot; &amp;&amp; !ISPICKVAL(Approval_Status__c, &quot;Approved&quot;) &amp;&amp;   
Event_Date__c  - Today() &lt;= 45</errorConditionFormula>
        <errorDisplayField>Event_Date__c</errorDisplayField>
        <errorMessage>Event Date must be at least 45 days in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Travel_Arrangement_Info</fullName>
        <active>true</active>
        <description>If travel arrangements are needed for an event, hotel and flight info.</description>
        <errorConditionFormula>ISPICKVAL(Travel_Arrangements_Needed__c, &apos;Yes&apos;) &amp;&amp;
OR (ISBLANK(Hotel_of_Nights__c),
ISBLANK(Hotel_Arrival__c),
ISBLANK(Hotel_Check_Out__c),
ISBLANK(Flight_Arrival__c),
ISBLANK(Flight_Departure__c))</errorConditionFormula>
        <errorDisplayField>Travel_Arrangements_Needed__c</errorDisplayField>
        <errorMessage>If travel arrangements are needed, please enter values for flight and hotel section.</errorMessage>
    </validationRules>
</CustomObject>